--- a/src/AvenueClothing.Feature.Catalog.Module/AvenueClothing.Feature.Catalog.Module.csproj
+++ b/src/AvenueClothing.Feature.Catalog.Module/AvenueClothing.Feature.Catalog.Module.csproj
@@ -126,6 +126,7 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Controllers\CatalogImageCaruselController.cs" />
+    <Compile Include="Controllers\CategoryImageController.cs" />
     <Compile Include="Controllers\ProductCardController.cs" />
     <Compile Include="Controllers\FacetsController.cs" />
     <Compile Include="Controllers\CategoryController.cs" />
@@ -138,6 +139,7 @@
     <Compile Include="Controllers\VariantPickerController.cs" />
     <Compile Include="Extensions\FacetedQueryStringExtensions.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="ViewModels\CategoryImageViewModel.cs" />
     <Compile Include="ViewModels\ProductPriceCalculatePriceForVariantViewModel.cs" />
     <Compile Include="ViewModels\ProductPriceCalculatePriceViewModel.cs" />
     <Compile Include="ViewModels\ProductPriceRenderingViewModel.cs" />
@@ -205,7 +207,9 @@
   <ItemGroup>
     <Content Include="Views\ProductList.cshtml" />
   </ItemGroup>
-  <ItemGroup />
+  <ItemGroup>
+    <Content Include="Views\CategoryImage\Rendering.cshtml" />
+  </ItemGroup>
   <ItemGroup>
     <Content Include="Views\ProductPrice\Rendering.cshtml" />
   </ItemGroup>
