--- a/src/project/AvenueClothing/serialization/Renderings/Renderings/Commerce/Catalog/Category Image.yml
+++ b/src/project/AvenueClothing/serialization/Renderings/Renderings/Commerce/Catalog/Category Image.yml
@@ -1,13 +1,16 @@
 ﻿---
-ID: "bc973506-533c-4611-bc24-c9c0cfcffb52"
+ID: "ba033cd1-9c89-497e-9254-db1a353bf9bd"
 Parent: "ea28baf4-62fa-4fa9-80f9-07c39608e5e7"
-Template: "99f8905d-4a87-4eb8-9f8b-a9bebfb3add6"
+Template: "2a3e91a0-7987-44b5-ab34-35c2d9de83b9"
 Path: /sitecore/layout/Renderings/Commerce/Catalog/Category Image
 DB: master
 SharedFields:
-- ID: "51b435bc-f7b9-478a-9c51-52916af96ff5"
-  Hint: Path
-  Value: ~/Views/Renderings/CategoryImage.cshtml
+- ID: "ded9e431-3604-4921-a4b3-a6ec7636a5b6"
+  Hint: Controller Action
+  Value: Rendering
+- ID: "e64ad073-dfcc-4d20-8c0b-fe5aa6226cd7"
+  Hint: Controller
+  Value: CategoryImage
 Languages:
 - Language: en
   Versions:
@@ -15,4 +18,4 @@ Languages:
     Fields:
     - ID: "25bed78c-4957-4165-998a-ca1b52f67497"
       Hint: __Created
-      Value: 20161012T214046Z
+      Value: 20161108T140033Z
