--- a/src/AvenueClothing.Feature.General.Module/AvenueClothing.Feature.General.Module.csproj
+++ b/src/AvenueClothing.Feature.General.Module/AvenueClothing.Feature.General.Module.csproj
@@ -163,7 +163,12 @@
   <ItemGroup>
     <WCFMetadata Include="Service References\" />
   </ItemGroup>
-  <ItemGroup />
+  <ItemGroup>
+    <ProjectReference Include="..\AvenueClothing.Foundation.MvcExtensionsModule\AvenueClothing.Foundation.MvcExtensionsModule.csproj">
+      <Project>{F2BAB86C-44DB-446C-A995-03A33C98855D}</Project>
+      <Name>AvenueClothing.Foundation.MvcExtensionsModule</Name>
+    </ProjectReference>
+  </ItemGroup>
   <PropertyGroup>
     <VisualStudioVersion Condition="'$(VisualStudioVersion)' == ''">10.0</VisualStudioVersion>
     <VSToolsPath Condition="'$(VSToolsPath)' == ''">$(MSBuildExtensionsPath32)\Microsoft\VisualStudio\v$(VisualStudioVersion)</VSToolsPath>
