--- a/src/AvenueClothing.Feature.Catalog.Module/AvenueClothing.Feature.Catalog.Module.csproj
+++ b/src/AvenueClothing.Feature.Catalog.Module/AvenueClothing.Feature.Catalog.Module.csproj
@@ -126,6 +126,7 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Controllers\CatalogImageCaruselController.cs" />
+    <Compile Include="Controllers\PromotedProductsController.cs" />
     <Compile Include="Controllers\CategoryImageController.cs" />
     <Compile Include="Controllers\ProductCardController.cs" />
     <Compile Include="Controllers\FacetsController.cs" />
@@ -146,6 +147,7 @@
     <Compile Include="ViewModels\CatalogImageCaruselRenderingViewModel.cs" />
     <Compile Include="ViewModels\CategoryNavigationRenderingViewModel.cs" />
     <Compile Include="ViewModels\CategoryRenderingViewModel.cs" />
+    <Compile Include="ViewModels\PromotedProductsViewModel.cs" />
     <Compile Include="ViewModels\ReviewFormRenderingViewModel.cs" />
     <Compile Include="ViewModels\FacetsRenderingViewModel.cs" />
     <Compile Include="ViewModels\HomepageCatalogViewModel.cs" />
@@ -184,16 +186,10 @@
     <Content Include="Views\VariantPicker\Rendering.cshtml" />
   </ItemGroup>
   <ItemGroup>
-    <Content Include="Views\Renderings\HomepageCatalog.cshtml" />
-  </ItemGroup>
-  <ItemGroup>
     <Content Include="Views\QuantityPicker\Rendering.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Content Include="Views\Renderings\ProductImage.cshtml" />
-  </ItemGroup>
-  <ItemGroup>
-    <Content Include="Views\Renderings\CategoryImage.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Content Include="Views\Renderings\ProductDetails.cshtml" />
@@ -218,6 +214,9 @@
   </ItemGroup>
   <ItemGroup>
     <Content Include="Views\Renderings\Searchbar.cshtml" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="Views\PromotedProducts\Rendering.cshtml" />
   </ItemGroup>
   <PropertyGroup>
     <VisualStudioVersion Condition="'$(VisualStudioVersion)' == ''">10.0</VisualStudioVersion>
