--- a/src/project/AvenueClothing/serialization/Renderings/Renderings/Commerce/Catalog/Homepage Catalog.yml
+++ b/src/project/AvenueClothing/serialization/Renderings/Renderings/Commerce/Catalog/Homepage Catalog.yml
@@ -1,13 +1,16 @@
 ﻿---
-ID: "74d43cb5-4d7a-470f-a042-8954f2b5a75b"
+ID: "0314ed58-5a97-41e9-855d-046700380e21"
 Parent: "ea28baf4-62fa-4fa9-80f9-07c39608e5e7"
-Template: "99f8905d-4a87-4eb8-9f8b-a9bebfb3add6"
+Template: "2a3e91a0-7987-44b5-ab34-35c2d9de83b9"
 Path: /sitecore/layout/Renderings/Commerce/Catalog/Homepage Catalog
 DB: master
 SharedFields:
-- ID: "51b435bc-f7b9-478a-9c51-52916af96ff5"
-  Hint: Path
-  Value: ~/Views/Renderings/HomepageCatalog.cshtml
+- ID: "ded9e431-3604-4921-a4b3-a6ec7636a5b6"
+  Hint: Controller Action
+  Value: Rendering
+- ID: "e64ad073-dfcc-4d20-8c0b-fe5aa6226cd7"
+  Hint: Controller
+  Value: PromotedProducts
 Languages:
 - Language: en
   Versions:
@@ -15,4 +18,4 @@ Languages:
     Fields:
     - ID: "25bed78c-4957-4165-998a-ca1b52f67497"
       Hint: __Created
-      Value: 20161012T085136Z
+      Value: 20161109T065705Z
