--- a/src/AvenueClothing.B2C/packages.config
+++ b/src/AvenueClothing.B2C/packages.config
@@ -12,6 +12,8 @@
   <package id="Microsoft.AspNet.WebApi.WebHost" version="5.2.3" targetFramework="net461" />
   <package id="Microsoft.AspNet.WebPages" version="3.2.3" targetFramework="net45" />
   <package id="Microsoft.CodeDom.Providers.DotNetCompilerPlatform" version="1.0.0" targetFramework="net45" />
+  <package id="Microsoft.Extensions.DependencyInjection" version="1.0.0" targetFramework="net461" />
+  <package id="Microsoft.Extensions.DependencyInjection.Abstractions" version="1.0.0" targetFramework="net461" />
   <package id="Microsoft.Net.Compilers" version="1.0.0" targetFramework="net45" developmentDependency="true" />
   <package id="Microsoft.Web.Infrastructure" version="1.0.0.0" targetFramework="net45" />
   <package id="Newtonsoft.Json" version="6.0.5" targetFramework="net461" />
@@ -19,9 +21,18 @@
   <package id="Rainbow.Core" version="1.3.1" targetFramework="net461" />
   <package id="Rainbow.Storage.Sc" version="1.3.1" targetFramework="net461" />
   <package id="Rainbow.Storage.Yaml" version="1.3.1" targetFramework="net461" />
-  <package id="SimpleInjector" version="3.2.2" targetFramework="net461" />
-  <package id="SimpleInjector.Integration.Web" version="3.2.2" targetFramework="net461" />
-  <package id="SimpleInjector.Integration.Web.Mvc" version="3.2.2" targetFramework="net461" />
+  <package id="System.Collections" version="4.0.11" targetFramework="net461" />
+  <package id="System.Collections.Concurrent" version="4.0.12" targetFramework="net461" />
+  <package id="System.ComponentModel" version="4.0.1" targetFramework="net461" />
+  <package id="System.Diagnostics.Debug" version="4.0.11" targetFramework="net461" />
+  <package id="System.Globalization" version="4.0.11" targetFramework="net461" />
+  <package id="System.Linq" version="4.1.0" targetFramework="net461" />
+  <package id="System.Linq.Expressions" version="4.1.0" targetFramework="net461" />
+  <package id="System.Reflection" version="4.1.0" targetFramework="net461" />
+  <package id="System.Resources.ResourceManager" version="4.0.1" targetFramework="net461" />
+  <package id="System.Runtime.Extensions" version="4.1.0" targetFramework="net461" />
+  <package id="System.Threading" version="4.0.11" targetFramework="net461" />
+  <package id="System.Threading.Tasks" version="4.0.11" targetFramework="net461" />
   <package id="uCommerce.Core" version="7.2.1.16274" targetFramework="net461" />
   <package id="Unicorn" version="3.2.0" targetFramework="net461" />
   <package id="Unicorn.Core" version="3.2.0" targetFramework="net461" />
