--- a/src/AvenueClothing.Tests/packages.config
+++ b/src/AvenueClothing.Tests/packages.config
@@ -5,6 +5,7 @@
   <package id="Microsoft.AspNet.WebPages" version="3.2.3" targetFramework="net461" />
   <package id="Microsoft.Web.Infrastructure" version="1.0.0.0" targetFramework="net461" />
   <package id="NSubstitute" version="1.10.0.0" targetFramework="net461" />
+  <package id="Sitecore.FakeDb" version="1.3.1" targetFramework="net461" />
   <package id="uCommerce.Core" version="7.2.1.16274" targetFramework="net461" />
   <package id="xunit.abstractions" version="2.0.0" targetFramework="net461" />
   <package id="xunit.assert" version="2.1.0" targetFramework="net461" />
