--- a/src/AvenueClothing.Foundation.MvcExtensions/AvenueClothing.Foundation.MvcExtensions.csproj
+++ b/src/AvenueClothing.Foundation.MvcExtensions/AvenueClothing.Foundation.MvcExtensions.csproj
@@ -7,8 +7,8 @@
     <ProjectGuid>{F2BAB86C-44DB-446C-A995-03A33C98855D}</ProjectGuid>
     <OutputType>Library</OutputType>
     <AppDesignerFolder>Properties</AppDesignerFolder>
-    <RootNamespace>AvenueClothing.Foundation.MvcExtensionsModule</RootNamespace>
-    <AssemblyName>AvenueClothing.Foundation.MvcExtensionsModule</AssemblyName>
+    <RootNamespace>AvenueClothing.Foundation.MvcExtensions</RootNamespace>
+    <AssemblyName>AvenueClothing.Foundation.MvcExtensions</AssemblyName>
     <TargetFrameworkVersion>v4.5.2</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
   </PropertyGroup>
