Use Sc datasource instead of hard code guid when displaying the review form and list.

--- a/src/AvenueClothing.Feature.Catalog.Module/AvenueClothing.Feature.Catalog.Module.csproj
+++ b/src/AvenueClothing.Feature.Catalog.Module/AvenueClothing.Feature.Catalog.Module.csproj
@@ -127,7 +127,7 @@
   <ItemGroup>
     <Compile Include="Controllers\CatalogImageCaruselController.cs" />
     <Compile Include="Controllers\ProductPrimaryImageController.cs" />
-    <Compile Include="Controllers\ProductDetailsController.cs" />
+    <Compile Include="Controllers\ProductDetailController.cs" />
     <Compile Include="Controllers\PromotedProductsController.cs" />
     <Compile Include="Controllers\CategoryImageController.cs" />
     <Compile Include="Controllers\ProductCardController.cs" />
