--- a/src/project/AvenueClothing/serialization/Renderings/Renderings/Commerce/Catalog/Product Detail.yml
+++ b/src/project/AvenueClothing/serialization/Renderings/Renderings/Commerce/Catalog/Product Detail.yml
@@ -5,6 +5,9 @@ Template: "2a3e91a0-7987-44b5-ab34-35c2d9de83b9"
 Path: /sitecore/layout/Renderings/Commerce/Catalog/Product Detail
 DB: master
 SharedFields:
+- ID: "5a14936f-2100-4541-b700-2f122e88f3f8"
+  Hint: Data source
+  Value: "{395CC694-42B4-45D5-A3D5-81DA55DE6CE4}|{93411B0B-FF7F-4D1E-A2EB-769FCA3B4B99}"
 - ID: "ded9e431-3604-4921-a4b3-a6ec7636a5b6"
   Hint: Controller Action
   Value: Rendering
