--- a/src/AvenueClothing.Feature.Catalog.Module/AvenueClothing.Feature.Catalog.Module.csproj
+++ b/src/AvenueClothing.Feature.Catalog.Module/AvenueClothing.Feature.Catalog.Module.csproj
@@ -125,33 +125,32 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Controllers\CatalogImageCaruselController.cs" />
-    <Compile Include="Controllers\ProductCardController.cs" />
-    <Compile Include="Controllers\FacetsController.cs" />
     <Compile Include="Controllers\CategoryController.cs" />
     <Compile Include="Controllers\CategoryNavigationController.cs" />
+    <Compile Include="Controllers\FacetsController.cs" />
+    <Compile Include="Controllers\FrontpageProductsController.cs" />
+    <Compile Include="Controllers\ProductCardController.cs" />
     <Compile Include="Controllers\ProductPriceController.cs" />
     <Compile Include="Controllers\QuantityPickerController.cs" />
-    <Compile Include="Controllers\ReviewListController.cs" />
-    <Compile Include="Controllers\ReviewFormController.cs" />
     <Compile Include="Controllers\SearchController.cs" />
     <Compile Include="Controllers\VariantPickerController.cs" />
     <Compile Include="Extensions\FacetedQueryStringExtensions.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="ViewModels\ProductPriceCalculatePriceForVariantViewModel.cs" />
-    <Compile Include="ViewModels\ProductPriceCalculatePriceViewModel.cs" />
-    <Compile Include="ViewModels\ProductPriceRenderingViewModel.cs" />
     <Compile Include="ViewModels\CatalogImageCaruselRenderingViewModel.cs" />
     <Compile Include="ViewModels\CategoryNavigationRenderingViewModel.cs" />
     <Compile Include="ViewModels\CategoryRenderingViewModel.cs" />
-    <Compile Include="ViewModels\ReviewFormRenderingViewModel.cs" />
     <Compile Include="ViewModels\FacetsRenderingViewModel.cs" />
     <Compile Include="ViewModels\HomepageCatalogViewModel.cs" />
     <Compile Include="ViewModels\ProductCardRenderingViewModel.cs" />
+    <Compile Include="ViewModels\ProductPriceCalculatePriceForVariantViewModel.cs" />
+    <Compile Include="ViewModels\ProductPriceCalculatePriceViewModel.cs" />
+    <Compile Include="ViewModels\ProductPriceRenderingViewModel.cs" />
     <Compile Include="ViewModels\QuantityPickerRenderingViewModel.cs" />
+    <Compile Include="ViewModels\ReviewFormRenderingViewModel.cs" />
     <Compile Include="ViewModels\ReviewFormSaveReviewViewModel.cs" />
     <Compile Include="ViewModels\ReviewListRenderingViewModel.cs" />
-    <Compile Include="ViewModels\VariantPickerVariantExistsViewModel.cs" />
     <Compile Include="ViewModels\VariantPickerRenderingViewModel.cs" />
+    <Compile Include="ViewModels\VariantPickerVariantExistsViewModel.cs" />
   </ItemGroup>
   <ItemGroup>
     <Content Include="packages.config" />
@@ -196,12 +195,6 @@
     <Content Include="Views\Renderings\ProductDetails.cshtml" />
   </ItemGroup>
   <ItemGroup>
-    <Content Include="Views\ReviewForm\Rendering.cshtml" />
-  </ItemGroup>
-  <ItemGroup>
-    <Content Include="Views\ReviewList\Rendering.cshtml" />
-  </ItemGroup>
-  <ItemGroup>
     <Content Include="Views\ProductList.cshtml" />
   </ItemGroup>
   <ItemGroup>
@@ -221,6 +214,9 @@
       <Project>{F2BAB86C-44DB-446C-A995-03A33C98855D}</Project>
       <Name>AvenueClothing.Foundation.MvcExtensionsModule</Name>
     </ProjectReference>
+  </ItemGroup>
+  <ItemGroup>
+    <Content Include="Controllers\ProductCardController.cs.orig" />
   </ItemGroup>
   <PropertyGroup>
     <VisualStudioVersion Condition="'$(VisualStudioVersion)' == ''">10.0</VisualStudioVersion>
