--- a/src/AvenueClothing.B2C/AvenueClothing.Project.Website.csproj
+++ b/src/AvenueClothing.B2C/AvenueClothing.Project.Website.csproj
@@ -216,13 +216,13 @@
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
-    <ProjectReference Include="..\AvenueClothing.Feature.Transaction.Module\AvenueClothing.Feature.Transaction.Module.csproj">
-      <Project>{267ea69c-3f72-4f2c-b46e-ca229d71546f}</Project>
-      <Name>AvenueClothing.Feature.Transaction.Module</Name>
-    </ProjectReference>
     <ProjectReference Include="..\AvenueClothing.Foundation.MvcExtensions\AvenueClothing.Foundation.MvcExtensions.csproj">
       <Project>{F2BAB86C-44DB-446C-A995-03A33C98855D}</Project>
       <Name>AvenueClothing.Foundation.MvcExtensions</Name>
+    </ProjectReference>
+    <ProjectReference Include="..\AvenueClothing.Project.Transaction\AvenueClothing.Project.Transaction.csproj">
+      <Project>{267ea69c-3f72-4f2c-b46e-ca229d71546f}</Project>
+      <Name>AvenueClothing.Project.Transaction</Name>
     </ProjectReference>
   </ItemGroup>
   <PropertyGroup>
