--- a/src/AvenueClothing.B2C/AvenueClothing.Project.Website.csproj
+++ b/src/AvenueClothing.B2C/AvenueClothing.Project.Website.csproj
@@ -186,6 +186,8 @@
     <Content Include="packages.config" />
     <Content Include="Content\bootstrap.min.css.map" />
     <Content Include="Content\bootstrap.css.map" />
+    <Content Include="Scripts\require-2.3.2.js" />
+    <Content Include="Scripts\require-2.3.2.min.js" />
     <Content Include="Views\Layout.cshtml" />
     <Content Include="Css\fontawesome-webfont.eot" />
     <Content Include="Css\fontawesome-webfont.ttf" />
