--- a/src/AvenueClothing.B2C/packages.config
+++ b/src/AvenueClothing.B2C/packages.config
@@ -1,11 +1,13 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
+  <package id="Antlr" version="3.4.1.9004" targetFramework="net461" />
   <package id="bootstrap" version="4.0.0-alpha4" targetFramework="net461" />
   <package id="jQuery" version="3.0.0.1" targetFramework="net461" />
   <package id="Kamsar.WebConsole" version="1.2.2.0" targetFramework="net461" />
   <package id="MicroCHAP" version="1.2.1.0" targetFramework="net461" />
   <package id="Microsoft.AspNet.Mvc" version="5.2.3" targetFramework="net45" />
   <package id="Microsoft.AspNet.Razor" version="3.2.3" targetFramework="net45" />
+  <package id="Microsoft.AspNet.Web.Optimization" version="1.1.0" targetFramework="net461" />
   <package id="Microsoft.AspNet.WebApi" version="5.2.0" targetFramework="net461" />
   <package id="Microsoft.AspNet.WebApi.Client" version="5.2.3" targetFramework="net461" />
   <package id="Microsoft.AspNet.WebApi.Core" version="5.2.3" targetFramework="net461" />
@@ -36,4 +38,5 @@
   <package id="uCommerce.Core" version="7.2.1.16274" targetFramework="net461" />
   <package id="Unicorn" version="3.2.0" targetFramework="net461" />
   <package id="Unicorn.Core" version="3.2.0" targetFramework="net461" />
+  <package id="WebGrease" version="1.3.0" targetFramework="net461" />
 </packages>
