Facets serach is now a require module

--- a/src/AvenueClothing.Project.Catalog/AvenueClothing.Project.Catalog.csproj
+++ b/src/AvenueClothing.Project.Catalog/AvenueClothing.Project.Catalog.csproj
@@ -161,7 +161,7 @@
   <ItemGroup>
     <Content Include="Scripts\jsPriceCalculation.js" />
     <Content Include="Scripts\uCommerce.demostore.productpage.js" />
-    <Content Include="Scripts\uCommerce.facets.js" />
+    <Content Include="Scripts\jsFacets.js" />
     <Content Include="Views\CategoryNavigation\Rendering.cshtml" />
   </ItemGroup>
   <ItemGroup>
