--- a/src/AvenueClothing.B2C/AvenueClothing.Project.Website.csproj
+++ b/src/AvenueClothing.B2C/AvenueClothing.Project.Website.csproj
@@ -198,6 +198,7 @@
     <Content Include="packages.config" />
     <Content Include="Content\bootstrap.min.css.map" />
     <Content Include="Content\bootstrap.css.map" />
+    <Content Include="Scripts\uri.min.js" />
     <Content Include="Scripts\require-2.3.2.js" />
     <Content Include="Scripts\require-2.3.2.min.js" />
     <Content Include="Views\Layout.cshtml" />
